--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- CSS link -->
-    <link rel="stylesheet" href="/ecommerce-project/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     
     <!-- Google fonts link -->
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=Noto+Serif:wght@400;700&display=swap" 
