removed login link

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li class="nav__list--item">Men</li>
             <li class="nav__list--item">Women</li>
 
-            <a href="/ecommerce-project/login.html" target="_blank">
+            <a href="#" target="_blank">
                 <li class="nav__list--item">
                     <i class="far fa-user"></i>
                 </li>
