updated sass and js links

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     </ul>
 </footer>
 
-<script src="/ecommerce-project/main.js"></script>
+<script src="./main.js"></script>
 
 </body>
 </html>
