updated responsive styles

--- a/index.html
+++ b/index.html
@@ -30,14 +30,15 @@
                 <!-- While this is working with the styles, it's bad practice to not have the brand logo as
                 an h1 element. -->
             <!-- </h1> -->
-            <li class="nav__list--item">Men</li>
-            <li class="nav__list--item">Women</li>
+            <!-- <li class="nav__list--item">Men</li>
+            <li class="nav__list--item">Women</li> -->
+            <!-- Remove these two items for now. Get the page up and working, and then add in more content. -->  
 
-            <a href="#" target="_blank">
+            <!-- <a href="#" target="_blank">
                 <li class="nav__list--item">
                     <i class="far fa-user"></i>
                 </li>
-            </a>
+            </a> -->
             
             <li class="nav__list--item cartIcon">
                 <i class="fas fa-shopping-cart"></i>
@@ -116,12 +117,12 @@
 
     <div class="card">
         <div class="card__imageContainer">
-            <div class="card__image--red">
+            <div class="card__image--newbalance">
                 &nbsp;
             </div>
         </div>
         <ul class="card__text">
-            <h3 class="card__text--header">Nike trainers</h3>
+            <h3 class="card__text--header">Trainers</h3>
             <li class="card__text--item">£75</li>
             <button class="card__text--button">Add to cart</button>
         </ul>
@@ -149,6 +150,19 @@
         <ul class="card__text">
             <h3 class="card__text--header">Red three-stripe tee</h3>
             <li class="card__text--item">£35</li>
+            <button class="card__text--button">Add to cart</button>
+        </ul>
+    </div>
+
+    <div class="card">
+        <div class="card__imageContainer">
+            <div class="card__image--dragonball">
+                &nbsp;
+            </div>
+        </div>
+        <ul class="card__text">
+            <h3 class="card__text--header">Dragonball tee</h3>
+            <li class="card__text--item">£20</li>
             <button class="card__text--button">Add to cart</button>
         </ul>
     </div>
