--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
             <li class="nav__list--item">Women</li> -->
             <!-- Remove these two items for now. Get the page up and working, and then add in more content. -->  
 
-            <!-- <a href="#" target="_blank">
+            <a href="./login.html" target="_blank">
                 <li class="nav__list--item">
                     <i class="far fa-user"></i>
                 </li>
-            </a> -->
+            </a>
             
             <li class="nav__list--item cartIcon">
                 <i class="fas fa-shopping-cart"></i>
@@ -54,7 +54,7 @@
 <!-- Shopping cart -->
 <div class="cart">
     <ul class="cart__list">
-        <div class="cart__list--row">
+        <!-- <div class="cart__list--row">
             <li class="cart__list--item">
                 <p class="cart__list--itemName">Shoes |</p>
                 <input class="cart__list--itemQuantity" type="number" value="1" min="1" max="10"> 
@@ -62,8 +62,9 @@
                 <button class="remove">Remove</button> 
                 <span class="ogPrice">£35.99</span>
             </li>
-        </div>
+        </div> -->
         
+        <!--
         <div class="cart__list--row">
             <li class="cart__list--item">
                 <p class="cart__list--itemName">Cap |</p>
@@ -82,7 +83,7 @@
                 <button class="remove">Remove</button> 
                 <span class="ogPrice">£55.00</span>
             </li>
-        </div>
+        </div> -->
     </ul>
 
     <div class="cart__list--rowButtons">
