--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
             <li class="nav__list--item">Women</li> -->
             <!-- Remove these two items for now. Get the page up and working, and then add in more content. -->  
 
-            <a href="./login.html" target="_blank">
+            <!-- <a href="./login.html" target="_blank">
                 <li class="nav__list--item">
                     <i class="far fa-user"></i>
                 </li>
-            </a>
+            </a> -->
             
             <li class="nav__list--item cartIcon">
                 <i class="fas fa-shopping-cart"></i>
