refactoring and update to cart functionality

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
                 <i class="fas fa-shopping-cart"></i>
             </li>
 
+            <li class="nav__list--num">
+                <p>0</p>
+            </li>
+
             <!-- Hamburger -->
             <div class="nav__square">
                 <span class="nav__ham"></span>
@@ -60,45 +64,19 @@
         <h2 class="cart__list--heading">Cart</h2>
         <!-- <div class="cart__list--row">
             <li class="cart__list--item">
-                <p class="cart__list--itemName">Shoes |</p>
+                <p class="cart__list--itemName">Shoes</p>
                 <input class="cart__list--itemQuantity" type="number" value="1" min="1" max="10"> 
                 <span class="cart__list--itemPrice">£35.99</span>
                 <button class="remove">Remove</button> 
                 <span class="ogPrice">£35.99</span>
             </li>
         </div> -->
-        
-        <!--
-        <div class="cart__list--row">
-            <li class="cart__list--item">
-                <p class="cart__list--itemName">Cap |</p>
-                <input class="cart__list--itemQuantity" type="number" value="1" min="1" max="10">
-                <span class="cart__list--itemPrice">£25.50</span>
-                <button class="remove">Remove</button> 
-                <span class="ogPrice">£25.50</span>
-            </li>
-        </div>
-
-        <div class="cart__list--row">
-            <li class="cart__list--item">
-                <p class="cart__list--itemName">Jeans |</p>
-                <input class="cart__list--itemQuantity" type="number" value="1" min="1" max="10">
-                <span class="cart__list--itemPrice">£55.00</span>
-                <button class="remove">Remove</button> 
-                <span class="ogPrice">£55.00</span>
-            </li>
-        </div> -->
     </ul>
 
     <div class="cart__list--rowButtons">
-        <button class="update">Update</button>
+        <button class="update cart__list--updateButton">Update</button>
         <li class="cart__list--total">Total:</li>
     </div>
-
-    <!-- <div class="cart__list--rowButtons">
-        <li class="cart__list--total">Total: 
-        </li>
-    </div> -->
 </div>
 
 <!-- Dark background -->
