updated cart icon functionality

--- a/index.html
+++ b/index.html
@@ -5,16 +5,12 @@
     <!-- Stando items -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <!-- JavaScript link -->
-    <script type="module" src="./js/main.js" defer></script>
 
     <!-- CSS link -->
     <link rel="stylesheet" href="./css/style.css">
     
     <!-- Google fonts link -->
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=Noto+Serif:wght@400;700&display=swap" 
-    rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=Noto+Serif:wght@400;700&display=swap" rel="stylesheet">
 
     <!-- Font Awesome link -->
     <script src="https://kit.fontawesome.com/4637f81001.js" crossorigin="anonymous"></script>
@@ -235,6 +231,9 @@
     </ul>
 </footer>
 
+
+<!-- JavaScript link -->
+<script type="module" src="./js/main.js"></script>
 </body>
 </html>
 
