removed unused images and general updates

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     <!-- CSS link -->
     <link rel="stylesheet" href="./css/style.css">
+
+    <!-- JavaScript link -->
+    <script type="module" src="./js/main.js" defer></script>
     
     <!-- Google fonts link -->
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=Noto+Serif:wght@400;700&display=swap" rel="stylesheet">
@@ -41,10 +44,11 @@
             
             <li class="nav__list--item cartIcon">
                 <i class="fas fa-shopping-cart"></i>
+                <!-- <span class="gg-shopping-cart">&nbsp;</span> -->
             </li>
 
             <li class="nav__list--num">
-                <p>0</p>
+                <span>0</span>
             </li>
 
             <!-- Hamburger -->
@@ -58,15 +62,6 @@
 <div class="cart">
     <ul class="cart__list">
         <h2 class="cart__list--heading">Cart</h2>
-        <!-- <div class="cart__list--row">
-            <li class="cart__list--item">
-                <p class="cart__list--itemName">Shoes</p>
-                <input class="cart__list--itemQuantity" type="number" value="1" min="1" max="10"> 
-                <span class="cart__list--itemPrice">£35.99</span>
-                <button class="remove">Remove</button> 
-                <span class="ogPrice">£35.99</span>
-            </li>
-        </div> -->
     </ul>
 
     <div class="cart__list--rowButtons">
@@ -147,78 +142,6 @@
         </ul>
     </div>
 
-    <!-- <div class="card">
-        <h2 class="card__header"></h2>
-        <div class="card__image--blue-jeans">
-            &nbsp;
-        </div>
-        <ul class="card__list">
-            <li class="card__list--item"></li>
-            <li class="card__list--item"></li>
-            <li class="card__list--item"></li>
-        </ul>
-    </div>
-
-    <div class="card">
-        <h2 class="card__header"></h2>
-        <div class="card__image--blue-top">
-            &nbsp;
-        </div>
-        <ul class="card__list">
-            <li class="card__list--item"></li>
-            <li class="card__list--item"></li>
-            <li class="card__list--item"></li>
-        </ul>
-    </div>
-
-    <div class="card">
-        <h2 class="card__header"></h2>
-        <div class="card__image--mexico">
-            &nbsp;
-        </div>
-        <ul class="card__list">
-            <li class="card__list--item"></li>
-            <li class="card__list--item"></li>
-            <li class="card__list--item"></li>
-        </ul>
-    </div> -->
-
-    <!-- <div class="card">
-        <h2 class="card__header"></h2>
-        <div class="card__image--suit">
-            &nbsp;
-        </div>
-        <ul class="card__list">
-            <li class="card__list--item"></li>
-            <li class="card__list--item"></li>
-            <li class="card__list--item"></li>
-        </ul>
-    </div>
-
-    <div class="card">
-        <h2 class="card__header"></h2>
-        <div class="card__image--beard">
-            &nbsp;
-        </div>
-        <ul class="card__list">
-            <li class="card__list--item"></li>
-            <li class="card__list--item"></li>
-            <li class="card__list--item"></li>
-        </ul>
-    </div>
-
-    <div class="card">
-        <h2 class="card__header"></h2>
-        <div class="card__image--blonde">
-            &nbsp;
-        </div>
-        <ul class="card__list">
-            <li class="card__list--item"></li>
-            <li class="card__list--item"></li>
-            <li class="card__list--item"></li>
-        </ul>
-    </div> -->
-
 </div>
 
 <!-- Footer -->
@@ -232,8 +155,7 @@
 </footer>
 
 
-<!-- JavaScript link -->
-<script type="module" src="./js/main.js"></script>
+
 </body>
 </html>
 
