working on cart styles

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </ul>
 
     <div class="cart__list--rowButtons">
-        <button class="update cart__list--updateButton">Update</button>
+        <button class="update btn cart__list--updateButton">Update</button>
         <li class="cart__list--total">Total:</li>
     </div>
 </div>
