added new cards

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
             
             <li class="nav__list--item cartIcon">
                 <i class="fas fa-shopping-cart"></i>
-                <!-- <span class="gg-shopping-cart">&nbsp;</span> -->
             </li>
 
             <li class="nav__list--num">
@@ -123,7 +122,7 @@
             </div>
         </div>
         <ul class="card__text">
-            <h3 class="card__text--header">Red three-stripe tee</h3>
+            <h3 class="card__text--header">Three-stripe tee</h3>
             <li class="card__text--item">£35</li>
             <button class="card__text--button">Add to cart</button>
         </ul>
@@ -138,6 +137,45 @@
         <ul class="card__text">
             <h3 class="card__text--header">Dragonball tee</h3>
             <li class="card__text--item">£20</li>
+            <button class="card__text--button">Add to cart</button>
+        </ul>
+    </div>
+
+    <div class="card">
+        <div class="card__imageContainer">
+            <div class="card__image--bone">
+                &nbsp;
+            </div>
+        </div>
+        <ul class="card__text">
+            <h3 class="card__text--header">Bone hand tee</h3>
+            <li class="card__text--item">£20</li>
+            <button class="card__text--button">Add to cart</button>
+        </ul>
+    </div>
+
+    <div class="card">
+        <div class="card__imageContainer">
+            <div class="card__image--mexico">
+                &nbsp;
+            </div>
+        </div>
+        <ul class="card__text">
+            <h3 class="card__text--header">Mexico football tee</h3>
+            <li class="card__text--item">£25</li>
+            <button class="card__text--button">Add to cart</button>
+        </ul>
+    </div>
+
+    <div class="card">
+        <div class="card__imageContainer">
+            <div class="card__image--jacket">
+                &nbsp;
+            </div>
+        </div>
+        <ul class="card__text">
+            <h3 class="card__text--header">Leather jacket</h3>
+            <li class="card__text--item">£125</li>
             <button class="card__text--button">Add to cart</button>
         </ul>
     </div>
