--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <nav class="nav">
         <ul class="nav__list">
             <!-- <h1 class="nav__logo"> -->
-                <a href="/ecommerce-project/index.html" target="_blank" class="nav__logo">
+                <a href="/ecommerce-project/index.html" class="nav__logo">
                     Brand
                 </a>
                 <!-- While this is working with the styles, it's bad practice to not have the brand logo as
